[package]
name = "csv-json-sm"
version = "0.1.0"
authors = ["Felipe Cardozo <fraifelipe@gmail.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
csv = "1.3.0"
fluvio-smartmodule = "0.7.3"
heck = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
